<resources>
    <string name="app_name">EventMusicPestyah_Hunyi</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="archiveButtonText">Archive</string>
    <string name="subscribedButtonText">Subscribed</string>
    <string name="activesButtonText">Actives</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="action_settings">Settings</string>

    <!-- For NewEventActivity -->

    <!-- Label names -->

    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="time">Time:</string>
    <string name="location">Loc.:</string>
    <string name="create_event">Create event:</string>
    <string name="date">Date:</string>
    <string name="uploadedImageLabel">Uploaded image:</string>

    <!-- Fillable hints -->

    <string name="event_name_hint">Event\'s name</string>
    <string name="event_time_hint">14:00</string>
    <string name="event_location_hint">Event\'s location. Ex.: City Center</string>
    <string name="event_type_hint">Event\'s type. Ex.: rock, pop</string>
    <string name="event_date_hint">not set</string>

    <!-- Button texts-->

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>

    <!-- Other -->

    <string name="uploadedImageMissing">none</string>
    <string name="M_NODE_EVENT">Events</string>
    <string name="event_image_content_descriptor">Event Image</string>

    <!-- To Filtered Recycler View -->

    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>


    <!-- Huni's stuff -->
    <string name="login_reg_welc_text">Register/Login</string>
    <string name="register_welc_text">Register</string>
    <string name="user_password_recover_text">Forgotten password? Click HERE!</string>

    <string name="login_bt">Login</string>
    <string name="logout_bt">LogOut</string>
    <string name="delete_user_bt">Delete User</string>
    <string name="register_bt">Register</string>
    <string name="register">Register</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">408335242929182</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb408335242929182</string>
    <string name="facebook_app_id">408335242929182</string>
    <string name="fb_login_protocol_scheme">fb408335242929182</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>


    <!-- BandDialog -->
    <string name="bandDialog_app_name">Create a Band</string>

    <string name="bandDialog_name_text">name:ex. The Rocky Brothers</string>
    <string name="bandDialog_members_text">members:ex. member1, member2, ...</string>
    <string name="bandDialog_type_text">type:ex. folk metal</string>
    <string name="bandDialog_ref_link_text">hard link:ex. www.RockY.com</string>
    <string name="bandDialog_musics_text">album titles:ex. The unforgiven, ...</string>
    <string name="cancel_bt">Cancel</string>


    <!-- Fillable hints -->
    <string name="event_viewer_eventName_hin">Event\'s name</string>
    <string name="event_viewer_subscribe">Subscribe to the event</string>


    <!-- new resources -->
    <string name="event_viewer_app_name">Checking event</string>

    <!-- Label names -->
    <string name="event_text_view">Event:</string>
    <string name="title_activity_show_event">ShowEventActivity</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="M_NODE_USER_EVENTS">User_Events</string>
    <string name="title_activity_get_location">Map</string>

</resources>
