<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_event_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell_5548.eventmusicpestyah_hunyi.EventViewerActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/uploadedImageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/event_viewer_eventNameLabel"
        android:layout_marginTop="14dp"
        android:labelFor="@+id/event_viewer_eventTime"
        android:text="@string/event_viewer_app_name"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/event_viewer_eventTimeLabel" />

    <TextView
        android:id="@+id/event_viewer_eventNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/event_viewerTV"
        android:layout_marginStart="36dp"
        android:layout_marginTop="29dp"
        android:labelFor="@+id/event_viewer_eventTime"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_viewer_eventTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/event_viewer_eventLocationLabel"
        android:layout_alignEnd="@+id/event_viewer_eventTimeLabel"
        android:layout_marginBottom="54dp"
        android:labelFor="@+id/event_viewer_eventTime"
        android:text="@string/type"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_viewer_eventNameLabel" />

    <TextView
        android:id="@+id/event_viewer_eventLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/eventDateLabel"
        android:layout_below="@+id/eventDateLabel"
        android:layout_marginTop="21dp"
        android:labelFor="@+id/event_viewer_eventTime"
        android:text="@string/location"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_viewer_eventTypeLabel" />

    <TextView
        android:id="@+id/event_viewer_eventName"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/event_viewer_eventDate"
        android:layout_alignTop="@+id/event_viewer_eventNameLabel"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/event_viewer_eventNameLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_viewer_eventTime"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/event_viewer_eventTimeLabel"
        android:layout_alignStart="@+id/event_viewer_eventLocation"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toEndOf="@+id/event_viewer_eventTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/event_viewer_eventDate" />

    <TextView
        android:id="@+id/event_viewer_eventTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/eventDateLabel"
        android:layout_below="@+id/event_viewer_eventLocationLabel"
        android:layout_marginTop="46dp"
        android:labelFor="@+id/event_viewer_eventTime"
        android:text="@string/time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDateLabel" />

    <TextView
        android:id="@+id/event_viewer_eventLocation"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/event_viewer_eventLocationLabel"
        android:layout_alignStart="@+id/event_viewer_eventDate"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toEndOf="@+id/event_viewer_eventLocationLabel"
        app:layout_constraintTop_toBottomOf="@+id/event_viewer_eventType" />

    <TextView
        android:id="@+id/event_viewer_eventType"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/event_viewer_eventTypeLabel"
        android:layout_alignBottom="@+id/event_viewer_eventTypeLabel"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toEndOf="@+id/event_viewer_eventTypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/event_viewer_eventName" />

    <TextView
        android:id="@+id/event_viewerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/uploadedImageName"
        android:layout_below="@+id/uploadedImageName"
        android:text="@string/event_text_view"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/uploadedImageName"
        android:layout_centerVertical="true"
        android:labelFor="@+id/event_viewer_eventTime"
        android:text="@string/date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_viewer_eventLocationLabel" />

    <TextView
        android:id="@+id/event_viewer_eventDate"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/eventDateLabel"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/event_viewer_eventNameLabel"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/eventDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/event_viewer_eventLocation" />

    <ImageView
        android:id="@+id/event_viewer_imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@+id/event_viewer_eventName"
        android:layout_alignEnd="@+id/event_viewer_eventName"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="53dp"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <Button
        android:id="@+id/event_viewer_subscribeBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/event_viewer_eventLocationLabel"
        android:layout_marginBottom="37dp"
        android:text="@string/event_viewer_subscribe" />

</RelativeLayout>